Bug 1331761 - Don't send stale GPUVideoTextures to in-process compositors. r=mattwoodrow, a=lizzard